engr441/while-infer/tests/valid/Switch_Valid_18.while
int f(int x) {
  switch(x) {
    case 0:
      break;
    default:
      return x + 1;
  }
  return x;
}

void main() {
    assert 0 == f(0);
    assert 2 == f(1);
    assert 3 == f(2);    
}