engr441/while-infer/tests/invalid-typing/Typing_Invalid_23.while
int f(int x) {
    for(int i=false;i<x;i=i+1) {
    	   x = x + 1;
    }
    return x;
}